--- a/style.css
+++ b/style.css
@@ -143,16 +143,24 @@ section:last-child {
 
 .keySkills {
 	list-style-type: none;
-	-moz-column-count:3;
-	-webkit-column-count:3;
-	column-count:3;
-	margin-bottom: 20px;
-	font-size: 1em;
+	-moz-column-count:1;
+	-webkit-column-count:1;
+	column-count:1;
+	margin-bottom: 5px;
+	margin-top: 5px;
+	font-size: 0.8em;
 	color: #444;
 }
 
 .keySkills ul li {
 	margin-bottom: 3px;
+}
+
+.keySkills h1 {
+	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-style: bold;
+	font-size: 1.5em;
+/*	color: #cf8a05; */
 }
 
 @media all and (min-width: 602px) and (max-width: 800px) {
